Fix z-index issue on dropdowns.

--- a/components/FilterDropdown.module.css
+++ b/components/FilterDropdown.module.css
@@ -29,6 +29,7 @@
 
 .content.shown {
   position: absolute;
+  z-index: 50;
   top: 0;
   left: 0;
   right: 0;
